--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,8 @@
 .overlay::-webkit-scrollbar,
 .board-column-content::-webkit-scrollbar,
 #contactsDiv::-webkit-scrollbar,
-.reduce-and-scroll-list::-webkit-scrollbar {
+.reduce-and-scroll-list::-webkit-scrollbar,
+.todo-card-detailed::-webkit-scrollbar {
     width: 13px;
 }
 
@@ -29,7 +30,8 @@
 .form-list ul::-webkit-scrollbar-track,
 .overlay::-webkit-scrollbar-track,
 .board-column-content::-webkit-scrollbar-track,
-.reduce-and-scroll-list::-webkit-scrollbar-track {
+.reduce-and-scroll-list::-webkit-scrollbar-track,
+.todo-card-detailed::-webkit-scrollbar-track {
     background: #F6F7F8 !important;
     /* box-shadow: inset 0 0 5px grey;
     border-radius: 10px; */
@@ -40,12 +42,27 @@
 .overlay::-webkit-scrollbar-thumb,
 .board-column-content::-webkit-scrollbar-thumb,
 #contactsDiv::-webkit-scrollbar-thumb,
-.reduce-and-scroll-list::-webkit-scrollbar-thumb {
+.reduce-and-scroll-list::-webkit-scrollbar-thumb,
+.todo-card-detailed::-webkit-scrollbar-thumb {
     background-color: #a8a8a8;
     border-radius: 8px;
     border: 3px solid #ffffff;
 }
 
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ .todo-card-detailed::-webkit-scrollbar,
+ #addForm::-webkit-scrollbar,
+ .overlay::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .todo-card-detailed::-webkit-scrollbar,
+  #addForm::-webkit-scrollbar,
+  .overlay::-webkit-scrollbar  {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  } 
 .main-content h1 {
     font-size: 71px;
     margin-block-start: 0;
